# cli-cih

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mcp-catalog.yaml  pyproject.toml
configs/: default_config.yaml
docs/: MCP_TOOLS.md
src/cli_cih/: __init__.py  __main__.py  main.py
src/cli_cih/adapters/: __init__.py  base.py  claude.py  codex.py  copilot.py  gemini.py  glm.py  ollama.py  pty_manager.py
src/cli_cih/cli/: __init__.py  app.py  commands.py  interactive.py
src/cli_cih/mcp/: __init__.py  exceptions.py  server.py  server_minimal.py
src/cli_cih/models/: __init__.py  config.py
src/cli_cih/orchestration/: __init__.py  ai_selector.py  approval.py  conflict.py  context.py  coordinator.py  discussion.py  synthesizer.py  task_analyzer.py
src/cli_cih/storage/: __init__.py  config.py  history.py  models.py
src/cli_cih/ui/: __init__.py  approval_prompt.py  panels.py  renderer.py  spinner.py  streaming.py  themes.py
src/cli_cih/utils/: __init__.py  logging.py  retry.py  text.py
tests/: __init__.py  test_adapters.py  test_ai_selector.py  test_context.py  test_integration.py  test_mcp_server.py  test_phase8_bugfixes.py  test_task_analyzer.py  test_utils_text.py
