[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cli-cih"
version = "1.1.0"
description = "Multi-AI Collaboration CLI Tool - Interactive terminal interface for orchestrating multiple AI assistants"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CLI-CIH Team"}
]
keywords = ["cli", "ai", "collaboration", "terminal", "interactive"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "prompt-toolkit>=3.0",
    "pexpect>=4.9",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "fastmcp>=0.4",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
cli-cih = "cli_cih.main:app"
cih = "cli_cih.main:app"
cih-mcp = "cli_cih.mcp.server:run_server"

[project.urls]
Homepage = "https://github.com/cli-cih/cli-cih"
Documentation = "https://cli-cih.readthedocs.io"
Repository = "https://github.com/cli-cih/cli-cih"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_cih"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
